[gd_scene load_steps=8 format=3 uid="uid://b8qx218xhvb8d"]

[ext_resource type="Script" uid="uid://6rlona4p25yl" path="res://TitleScreen/menu.gd" id="1_t4alp"]
[ext_resource type="Texture2D" uid="uid://dwojpmi3fkoqf" path="res://Textures/Menu.jpg" id="2_6q26e"]
[ext_resource type="PackedScene" uid="uid://7aqniattqyjl" path="res://Utility/basic_button.tscn" id="3_cxswi"]
[ext_resource type="Texture2D" uid="uid://cr4k6gbadu43s" path="res://Textures/GUI/github-mark-white.png" id="4_yf0qj"]
[ext_resource type="Texture2D" uid="uid://cjp3tw4y3hh2q" path="res://Textures/GUI/github-mark.png" id="5_0eg15"]
[ext_resource type="Texture2D" uid="uid://d3srb61xmeni8" path="res://Textures/GUI/youtube_social_circle_dark.png" id="6_0eg15"]
[ext_resource type="Texture2D" uid="uid://b2jmyb2c6828v" path="res://Textures/GUI/youtube_social_circle_red.png" id="7_dsl36"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_t4alp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("2_6q26e")

[node name="button_play" parent="." instance=ExtResource("3_cxswi")]
layout_mode = 0
offset_left = 280.0
offset_top = 156.0
offset_right = 360.0
offset_bottom = 186.0
text = "Play
"

[node name="button_credits" parent="." instance=ExtResource("3_cxswi")]
layout_mode = 0
offset_left = 280.0
offset_top = 196.0
offset_right = 360.0
offset_bottom = 226.0
text = "Credits"

[node name="button_exit" parent="." instance=ExtResource("3_cxswi")]
layout_mode = 0
offset_left = 280.0
offset_top = 236.0
offset_right = 360.0
offset_bottom = 266.0
text = "Exit"

[node name="button_gitHub" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 593.0
offset_top = 317.0
offset_right = 823.0
offset_bottom = 542.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("4_yf0qj")
texture_hover = ExtResource("5_0eg15")
stretch_mode = 1

[node name="button_Youtube" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 557.0
offset_top = 317.0
offset_right = 685.0
offset_bottom = 445.0
scale = Vector2(0.27, 0.27)
texture_normal = ExtResource("6_0eg15")
texture_hover = ExtResource("7_dsl36")
stretch_mode = 1

[connection signal="click_end" from="button_play" to="." method="_on_button_play_click_end"]
[connection signal="click_end" from="button_credits" to="." method="_on_button_credits_click_end"]
[connection signal="pressed" from="button_credits" to="." method="_on_button_creditsss_pressed"]
[connection signal="click_end" from="button_exit" to="." method="_on_button_exit_click_end"]
[connection signal="pressed" from="button_gitHub" to="." method="_on_button_git_hub_pressed"]
[connection signal="pressed" from="button_Youtube" to="." method="_on_button_youtube_pressed"]
